# channel-autopilot

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily-post.yml
scripts/: ingest.py  post_test.py
src/autopilot/: inbox.py  telegram.py
