[project]
name = "channel-autopilot"
version = "0.1.0"
description = "Autonomous content pipeline for the @izzatullokhnotes Telegram channel"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
